Refactor the code

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,9 @@
 {
-  "cSpell.words": ["eicon", "elementor", "Monika", "twentytwentyfive"]
+  "cSpell.words": [
+    "ABSPATH",
+    "eicon",
+    "elementor",
+    "Monika",
+    "twentytwentyfive"
+  ]
 }
